[package]
name = "abcparser_peg"
version = "0.1.0"
description = "A parsing expression grammar (PEG) parser for ABC, written in Rust"
authors = ["Sean Bolton <sean@smbolton.com>"]
license = "MIT"
build = "src/table_gen.rs"

[dependencies]
pest = "^0.4.1"
phf = "^0.7.21"

[build-dependencies]
phf_codegen = "^0.7.21"

[lib]
path = "src/abcparser_peg.rs"
crate-type = ["cdylib"]
